[gd_scene load_steps=4 format=3 uid="uid://fr25tpnefc5j"]

[ext_resource type="Theme" uid="uid://cne60462k31hi" path="res://assets/HUD_theme.tres" id="1_5a6de"]
[ext_resource type="Script" path="res://scripts/player/hud/hud.gd" id="2_lenq7"]
[ext_resource type="Script" path="res://scripts/player/hud/chat_box.gd" id="2_yw3ap"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_5a6de")
script = ExtResource("2_lenq7")

[node name="Chat" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_yw3ap")

[node name="ChatBox" type="LineEdit" parent="Chat"]
layout_mode = 2
offset_left = -154.0
offset_top = 69.0
offset_right = -114.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 8
placeholder_text = "Type Here"
max_length = 50
expand_to_text_length = true

[node name="ChatDisplayContainer" type="CenterContainer" parent="Chat"]
layout_mode = 0
offset_top = -16.0
offset_right = 40.0
offset_bottom = 24.0
use_top_left = true

[node name="Label" type="Label" parent="Chat/ChatDisplayContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "asdflkas"

[node name="ChatDisplayTimer" type="Timer" parent="Chat"]
wait_time = 3.0
one_shot = true
